--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -1,10 +1,33 @@
 @import "bootstrap/scss/bootstrap";
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&display=swap');
+
+html {
+	border: 2px dotted whitesmoke;
+	height: 100vh;
+}
 
 body {
 	background-color: rgb(25, 25, 25);
-	color: white;
+	color: whitesmoke;
+	font-family: 'Orbitron', sans-serif;
+}
+
+h1 {
+	font-weight: 900;
+	text-transform: uppercase;
+	margin: 20px;
 }
 
 h1, h2, h3, h4, h5, h6 {
 	margin-bottom: 0.75em;
+}
+
+form {
+	width: 100vw;
+	max-width: 820px;
+}
+
+p,
+li {
+	font-weight: 400;
 }
