--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -9,9 +9,11 @@ html {
 body {
 	background-color: rgb(25, 25, 25);
 	color: whitesmoke;
-	font-family: 'Orbitron', sans-serif;
 }
 
+/**
+* Font styling
+*/
 h1 {
 	font-weight: 900;
 	text-transform: uppercase;
@@ -19,12 +21,13 @@ h1 {
 }
 
 h1, h2, h3, h4, h5, h6 {
+	font-family: 'Orbitron', sans-serif;
 	margin-bottom: 0.75em;
 }
 
-form {
-	width: 100vw;
-	max-width: 820px;
+a {
+	font-family: 'Orbitron', sans-serif;
+	text-transform: uppercase;
 }
 
 p,
