better looking navbar

--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -8,6 +8,11 @@ body {
 	color: whitesmoke;
 }
 
+nav {
+	background-color: black;
+	border-bottom: 1px dotted whitesmoke;
+}
+
 /**
 * Font styling
 */
