background image alternatives

--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -4,6 +4,11 @@
 
 body {
 	background-color: rgb(25, 25, 25);
+	// background-image: url('/public/saksham-gangwar-YVgOh8w1R4s-unsplash.jpg');
+	background-image: url('/public/alex_rainer-_lEexUTVsHA-unsplash.jpg');
+	background-size: cover;
+	background-repeat: no-repeat; 
+	background-position: center center;
 	width: 100vw;
 	height: 100vh;
 	color: whitesmoke;
