styled button and react-icon

--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -5,7 +5,7 @@
 body {
 	background-color: rgb(25, 25, 25);
 	// background-image: url('/public/saksham-gangwar-YVgOh8w1R4s-unsplash.jpg');
-	background-image: url('/public/alex_rainer-_lEexUTVsHA-unsplash.jpg');
+	background-image: url('/alex_rainer-_lEexUTVsHA-unsplash.jpg');
 	background-size: cover;
 	background-repeat: no-repeat; 
 	background-position: center center;
@@ -21,11 +21,16 @@ nav {
 }
 
 .btn {
-	border: 3px solid rgb(0, 0, 0);
+	background-color: black;
 }
 
 .list-group-item {
 	border: none;
+}
+
+svg {
+	stroke-width: 2;
+	color: #FFE81F;
 }
 
 /**
