introtext on homepage, complementing styling and github icon inside menu

--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -51,6 +51,15 @@ a {
 	text-transform: uppercase;
 }
 
+.navbar-toggler-icon {
+	color: $white;
+}
+
+#intro-text {
+	background-color: $transparent-black;
+    padding: 1rem;
+}
+
 p,
 li,
 label,
