--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -32,6 +32,14 @@ svg {
 	color: $sw-yellow;
 }
 
+.loading-spinner-wrapper {
+	max-width: 100vw;
+	max-height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 /**
 * Font styling
 */
